# simple-regex-engine

./: .clangd  CMakeLists.txt  LICENSE  README.md  main.cpp  state.plantuml
complex/: .gitignore  CMakeLists.txt  main.cpp  regexp.cpp  regexp.h
complex/.cache/clangd/index/: main.cpp.9D639EC7779B7EA2.idx  regexp.cpp.2F047D46D79196D7.idx  regexp.h.C04E0219AD608BC9.idx
lib/: CMakeLists.txt  regexp.cpp  state.cpp  state.h
simple/: CMakeLists.txt  regexp.cpp
test/: CMakeLists.txt  regex-test.cpp
